welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: not found: value methodeAppeleeparLecompilateur
methodeAppeleeparLecompilateur()// tout ceci est ignoré 
^Source:2: error: not found: value autreAppel
autreAppel()/* ceci est également ignoré */
^Source:3: error: not found: value encoreUneAutreAppel
encoreUneAutreAppel() 
^