welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
methodeAppeleeparLecompilateur()// tout ceci est ignoré 
autreAppel()/* ceci est également ignoré */
encoreUneAutreAppel()